# sikidom

./: .gitignore  CMakeLists.txt
data/: data.txt  input.txt
headers/: apputils.hpp  canvas.hpp  math2d.hpp  point.hpp  pointcloud.hpp  polygon.hpp  regulars.hpp  shape.hpp  tests.hpp  vector.hpp
src/: apputils.cpp  canvas.cpp  main.cpp  main_test.cpp  math2d.cpp  point.cpp  pointcloud.cpp  polygon.cpp  regulars.cpp  tests.cpp
